# bevygap-spaceships

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-server.yaml  build-wasm.yaml  server-container.yaml
certificates/: cert.pem  generate.sh  key.pem
client/: Cargo.toml  Dockerfile
client/src/: client_plugin.rs  main.rs
client/src/screens/: connect.rs  gameplay.rs  mod.rs
client/www/: index.html
server/: Cargo.toml  Dockerfile  build.rs
server/src/: main.rs  server_plugin.rs
shared/: Cargo.toml
shared/src/: entity_label.rs  lib.rs  protocol_plugin.rs  renderer.rs  shared_plugin.rs
