[workspace]
members = [ "client", "server","shared"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["RJ <rj@metabrew.com>"]
publish = false


# optimisation notes: https://bevy-cheatbook.github.io/pitfalls/performance.html

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# If your own code does CPU-intensive work, you might want to also enable some optimization for it.
# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Here is a configuration for the most aggressive optimizations possible
# Read this when trying to optimise WASM build: https://bevy-cheatbook.github.io/platforms/wasm/size-opt.html
[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[workspace.dependencies]
# lightyear ver must match exactly with bevygap's version!
lightyear = {git = "https://github.com/cBournhonesque/lightyear.git", rev = "0b7a4852fbb2eb9848d2fbc04dd4eea70d51ea98", features = ["webtransport", "leafwing", "avian2d"], default-features = false}
avian2d   = { version = "0.1.1", default-features = false, features = ["serialize", "default-collider", "enhanced-determinism", "2d", "f32", "parry-f32"] }
bevy = {version = "0.14", default-features = false}
serde     = { version = "1.0.188", features = ["derive"] }
clap      = { version = "4.5.7", features = ["derive"] }
leafwing-input-manager = {version = "0.15.1", default-features = false, features = ["mouse", "keyboard", "gamepad"]}
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = [
  "registry",
  "env-filter",
] }

bevygap_client_plugin = {git = "https://github.com/RJ/bevygap.git", rev = "5eaa44c"}
#bevygap_client_plugin = {path = "../bevygap/bevygap_client_plugin/"}

[workspace.lints.clippy]
type_complexity = "allow"

[workspace.lints.rust]
unsafe_code = "deny"


[patch.crates-io]

# Need this so LWIM's bevy_egui dep is bumped to 0.29 for wasm reasons:
leafwing-input-manager = {git = "https://github.com/Leafwing-Studios/leafwing-input-manager.git", rev = "d6ef9e154bfafb186d6ab2acbd17b6f9e0849f47"}
