[package]
name = "client"
edition = "2021"
version.workspace = true
authors.workspace = true
publish.workspace = true

[features]
default = ["bevygap"]
bevygap = ["dep:bevygap_client_plugin"]

[dependencies]
bevy = {workspace = true}
shared = {path = "../shared", features = ["gui"]}
lightyear.workspace = true
avian2d.workspace = true
serde.workspace = true
leafwing-input-manager.workspace = true
bevygap_client_plugin = {git = "https://github.com/RJ/bevygap.git", optional = true}

[lints]
workspace = true

