[package]
name = "client"
edition = "2021"
version.workspace = true
authors.workspace = true
publish.workspace = true

[features]
default = ["bevygap"]
bevygap = ["dep:bevygap_client_plugin"]

[dependencies]
bevy = {workspace = true}
shared = {path = "../shared", features = ["gui"]}
lightyear.workspace = true
avian2d.workspace = true
serde.workspace = true
leafwing-input-manager = {workspace = true, features = ["ui", "asset"]}
bevygap_client_plugin = {workspace = true, optional = true}

[target."cfg(target_family = \"wasm\")".dependencies]
web-sys = { version = "0.3", features = ["Window", "Location"] }

#[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
#ring = { version = "0.17", features = ["wasm32_unknown_unknown_js"] }

[lints]
workspace = true

