[package]
name = "server"
edition = "2021"
version.workspace = true
authors.workspace = true
publish.workspace = true

[features]
gui = ["shared/gui"]

[dependencies]
bevy.workspace = true
shared = {path = "../shared", features = ["server"]}
lightyear.workspace = true
avian2d.workspace = true
serde.workspace = true
async-compat.workspace = true
leafwing-input-manager.workspace = true

[lints]
workspace = true
