[package]
name = "server"
edition = "2021"
version.workspace = true
authors.workspace = true
publish.workspace = true

[features]
default = ["bevygap"]
gui = ["shared/gui"]
bevygap = ["dep:bevygap_server_plugin"]

[dependencies]
bevy.workspace = true
shared = {path = "../shared", features = ["server"]}
lightyear.workspace = true
avian2d.workspace = true
serde.workspace = true
async-compat.workspace = true
leafwing-input-manager.workspace = true
bevygap_server_plugin = {git = "https://github.com/RJ/bevygap.git", optional = true}

[lints]
workspace = true
