[package]
name = "shared"
edition = "2021"
version.workspace = true
authors.workspace = true
publish.workspace = true

[features]
default = []
gui = ["dep:bevy-inspector-egui", "dep:bevy_screen_diagnostics", "leafwing-input-manager/egui"]
server = []


[dependencies]
bevy-inspector-egui = { version = "0.26", optional = true, default-features = false, features = ["bevy_pbr", "bevy_render"] }
bevy_screen_diagnostics = { version = "0.6.0", optional = true }

leafwing-input-manager.workspace = true
avian2d.workspace = true
lightyear.workspace = true
serde.workspace = true
tracing-subscriber.workspace = true
bevy = {workspace = true, features = [
  # "file_watcher", ## <-- not supported on WASM
  "bevy_asset",
  "bevy_state",
  "bevy_color",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "multi_threaded",
  "png",
  "hdr",
  "x11",
  "bevy_gizmos",
  "tonemapping_luts",
  "smaa_luts",
  "default_font",
  "webgl2",
  "sysinfo_plugin",
]}

[lints]
workspace = true
