[package]
name = "shared"
edition = "2021"
version.workspace = true
authors.workspace = true
publish.workspace = true

[features]
default = []
gui = ["dep:bevy-inspector-egui", "dep:bevy_screen_diagnostics", "leafwing-input-manager/egui", "bevygui"]
bevygui = [
    "bevy/bevy_render",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_gizmos",
    "bevy/tonemapping_luts",
    "bevy/smaa_luts",
    "bevy/default_font",
    "bevy/png",
    "bevy/hdr",
    "bevy/x11",
    "bevy/webgl2",
    "bevy/bevy_winit",
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_ui",
]
server = []


[dependencies]
bevy-inspector-egui = { version = "0.26", optional = true, default-features = false, features = ["bevy_pbr", "bevy_render"] }
bevy_screen_diagnostics = { version = "0.6.0", optional = true }

leafwing-input-manager.workspace = true
avian2d.workspace = true
lightyear.workspace = true
serde.workspace = true
tracing-subscriber.workspace = true
bevy = {workspace = true, features = [
  # "file_watcher", ## <-- not supported on WASM
  "bevy_asset",
  "bevy_state",
  "bevy_color",
  "multi_threaded",
  "sysinfo_plugin",
]}

[lints]
workspace = true
